# rpi

./: .gitignore  Cargo.toml  model.pth  output.mkv  run.sh
examples/: as5600.rs  boardcast.rs  data_saver.rs  env_camera_pipeline.rs  finger_pipeline.rs  imu.rs  imu_pipeline.rs  spi_screen.rs  video_saver.rs  video_streamer.rs
examples/camera_comman/: camera_viewer.rs  video_streamer.rs
examples/data_comman/: data_saver.rs
examples/finger/: aruco_viewer.rs  sf.rs
examples/imu/: imu_stream.rs
src/: aruco_finder.rs  data_saver.rs  data_streamer.rs  errors.rs  imu.rs  lib.rs  main.rs  net.rs  rx_hub.rs  soft_finger.rs  ssd1306_screen.rs  st7789v2_screen.rs  usb_camera.rs  video_recorder.rs
src/zenoh/: camera.rs  can.rs  finger.rs  imu.rs  mock-data.rs  save_imu.rs  server.rs
