[package]
name = "rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
# channel
crossbeam = "0.8.4"

# aruco detection and pose estimation
opencv = { version = "0.92.0", features = ["clang-runtime"] }

# video capture
v4l = "0.14"

# time
nix = { version = "0.29.0", features = ["time"] }

# video decoder
zune-jpeg = "0.4.11"

# matrix
nalgebra = { version = "0.33.0", features = ["serde", "serde-serialize"] }

# web server
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ai
burn = "0.13"
burn-import = "0.13"
burn-ndarray = { version = "0.13" }

# i2c imu
mpu6050 = "0.1.6"
mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp-rs.git" }
linux-embedded-hal = { version = "0.4", features = ["i2c"] }

# csv
csv = "1.3.0"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# i2c screen
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
